welcome.lessons.welcome.variables.Variables.scala.error
Variables:2: error: illegal start of simple expression
while (!estSurBiscuit());{
                        ^Variables:8: error: illegal start of simple expression
while (dejaFait!=nbPas);{
                       ^